new update image

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="card-plan-item">
               <div class="first">
-                <div class="plan-img"> <img src="/img/plan1.png" alt=""/></div>
+                <div class="plan-img"> <img src="https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan1.png" alt=""/></div>
                 <div class="plan-text">
                   <p class="title">Precio primer mes</p>
                   <h2 class="price">S/ 60</h2>
@@ -105,7 +105,7 @@
             </div>
             <div class="card-plan-item">
               <div class="first">
-                <div class="plan-img"> <img src="/img/plan2.png" alt=""/></div>
+                <div class="plan-img"> <img src="https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan2.png" alt=""/></div>
                 <div class="plan-text">
                   <p class="title">Precio primer mes</p>
                   <h2 class="price">S/ 89</h2>
@@ -133,7 +133,7 @@
             </div>
             <div class="card-plan-item">
               <div class="first">
-                <div class="plan-img"> <img src="/img/plan3.png" alt=""/></div>
+                <div class="plan-img"> <img src="https://raw.githubusercontent.com/szapataq/website-test/master/public/img/plan3.png" alt=""/></div>
                 <div class="plan-text">
                   <p class="title">Precio primer mes</p>
                   <h2 class="price">S/ 119</h2>
